Transfer Logic and Verification Preprepare
Now safely deletes the requests. Only deletes the transfers that were committed with the block. Leader cannot mislead the other nodes with faulty transactions with preprepare block